# smarties

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  README.rst  install_dependencies.sh
apps/: README.md  ext_app_test.cpp
apps/CMA/: Makefile  cmaes.h  cmaes_initials.par  cmaes_interface.h  cmaes_learn.cpp  cmaes_signals.par  fitfun.h  gsl_headers.h  launch.sh  main.cpp  outputlookup.m  plot_performance.m  plot_statistics.m  setup.sh  tags
apps/CUP2D_2fish/: runArguments00.sh  runArguments01.sh  runArguments02.sh  runArguments03.sh  setup.sh
apps/CUP2D_blowfish/: runArguments00.sh  runArguments01.sh  runArguments02.sh  runArguments03.sh  setup.sh
apps/CUP2D_cylFollow/: runArguments01.sh  runArguments02.sh  runArguments03.sh  setup.sh
apps/CUP2D_glider/: setup.sh
apps/CUP2D_smartCyl/: runArguments00.sh  runArguments00_cyl.sh  runArguments01.sh  setup.sh  setup_bck.sh
apps/CUP3D_LES_HIT/: README.rst  compareDirToReferenceSpectrum.py  computeDerivedQuantitiesNonDim.py  computeMeanIntegralQuantitiesNonDim.py  computeNonDimQuantitiesNonDim.py  computeNonDimQuantitiesNonDimTrained.py  computeSpectraHistogramsNonDim.py  computeSpectraNonDim.py  computeTrainedSpectraErrors.py  eval_all_les.sh  eval_all_train.py  eval_all_train.sh  extractTargetFilesNonDim.py  extractTargetHIT2.py  launchLESHIT.py  launch_all_les.sh  launch_all_les_blocksizes.sh  launch_all_les_grid.sh  plotHistogramsSGS.py  plotTrainedAvgLL.py  plotTrainedAvgLL2.py  plot_compute_structure.py  plot_eval_all_les.py  plot_eval_all_les2.py  plot_eval_all_les_gridsizes.py  plot_eval_all_les_nospectrum.py  runLesOptimization.py  sbatch_sf_compute.sh  setup.sh  smarties_plot_SGSact_obs1row.py
apps/Deepmind_control/: exec.py
apps/OpenAI_gym/: HumanoidWrapper.py  exec.py  exec_eval.py
apps/OpenAI_gym_atari/: exec.py
apps/boatNav/: Makefile  boatNav.cpp  odeSolve.cpp  odeSolve.h  runTest.cpp  setup.sh
apps/cart_pole_cpp/: CMakeLists.txt  Makefile  README.md  cart-pole.cpp  cart-pole.h  setup.sh
apps/cart_pole_distribAgent/: Makefile  cart-pole.cpp  launch.sh  setup.sh
apps/cart_pole_distribEnv/: Makefile  README.md  cart-pole.cpp  setup.sh
apps/cart_pole_f90/: Makefile  app_main.f90  cart-pole.cpp  cart_pole.f90  main.cpp  main.f90  setup.sh
apps/cart_pole_many/: Makefile  cart-pole.cpp  setup.sh
apps/cart_pole_mpi/: Makefile  cart-pole.cpp  setup.sh
apps/cart_pole_py/: cart-pole.py  exec.py  setup.sh
apps/func_maximization/: Makefile  function_opt.py  launch.sh  setup.sh  test-fit.cpp  testApp.py  testAppL96.py
apps/function_opt/: README.md  launch.sh  setup.sh
apps/glider/: Makefile  eval_gliders.sh  glider.cpp  glider.h  launch_glidereuler.sh  launch_gliders.sh  setup.sh
apps/predator_prey/: Makefile  README.md  matplotlibcpp.h  pp.cpp  pp.h  pp.py  setup.sh  twoPredOnePrey.cpp  twoPredOnePrey.h
apps/test_cpp_cart_pole/: Makefile  cart-pole.cpp  setup.sh
apps/test_mpi_cart_pole/: Makefile  README.md  cart-pole.cpp  setup.sh
apps/test_py_cart_pole/: cart-pole.py  launch.sh  setup.sh
apps/test_rnn/: launch.sh  setup.sh  testApp.py  testAppL96.py  testomp.cpp
apps/test_two_cart_poles/: Makefile  cart-pole.cpp  setup.sh
include/: smarties.f90  smarties.h  smarties_extern.h
launch/: README.md  create_rundir.sh  launch.sh  launchDaint.sh  launch_atari.sh  launch_base.sh  launch_deepmind.sh  launch_dmcs.sh  launch_gliders.sh  launch_gym.sh  launch_openai.sh  run.sh  test.cpp
launch/settings/: settings_ACER.sh  settings_DPG.sh  settings_DPG_unb.sh  settings_DQN.sh  settings_GAE.sh  settings_NAF.sh  settings_PPO.sh  settings_RACER.sh  settings_RACER_RNN.sh  settings_RACER_eval.sh  settings_RACER_expensiveData.sh  settings_RETPG.sh  settings_VRACER.sh  settings_VRACER_eval.sh  settings_VRACER_expensiveData.sh  settings_VRACER_expensiveData_eval.sh
launch/systematic/: eval_gliders.sh  launchDaint_acer_sbatch  launchDaint_deepmind.sh  launchDaint_dpg_perp_sbatch  launchDaint_dpg_perr_sbatch  launchDaint_dpg_sbatch  launchDaint_naf_perp_sbatch  launchDaint_naf_perr_sbatch  launchDaint_naf_sbatch  launchDaint_openai.sh  launchDaint_ppo_sbatch  launchDaint_racer_sbatch  launchDaint_retpg_sbatch  launch_systematic_study_dmc.sh  launch_systematic_study_newhp.sh  settings_bench_args_DMC.sh  settings_bench_args_hyper.sh
makefiles/: Makefile  README.md  make.daint  make.daint_mpich  make.daint_srun  make.euler  make.falcon  make.gcc.flags  make.icc.flags  make.lair  make.llvm.flags  make.macos
pytools/: excess_kurtosis.py  plot_Qcorr.py  plot_RACER_extra.py  plot_cmaes.py  plot_grads.py  plot_obs.py  plot_rew.py  plot_weights.py  random_kurtosis_driver_script.sh
settings/: ACER.json  CMA.json  DPG.json  DPG_light.json  DPG_orig.json  DQN.json  NAF.json  PPO.json  RACER.json  RACER_RNN.json  RACER_atari.json  RACER_glider.json  VRACER.json  VRACER_CMA.json  VRACER_LES.json  VRACER_expensiveData.json  VRACER_light.json  default.json
source/: Agent.h  Bund.h  Communicator.cpp  Communicator.h  Engine.cpp  Engine.h  Settings.cpp  Settings.h  StateAction.cpp  StateAction.h  main.cpp  smarties_extern.cpp  smarties_pybind11.cpp
source/Communicators/: Communicator.cpp  Communicator.h  Communicator.py  Communicator_atari.py  Communicator_dmc.py  Communicator_gym.py  Communicator_internal.cpp  Communicator_internal.h  Communicator_utils.cpp  Communicator_utils.h  README.md
source/Core/: Agent.h  Environment.h  Launcher.cpp  Launcher.h  Master.cpp  Master.h  StateAction.cpp  StateAction.h  Worker.cpp  Worker.h
source/Environments/: AllSystems.h  AtariEnvironment.cpp  AtariEnvironment.h  Environment.cpp  Environment.h  TwoActFishEnvironment.cpp  TwoActFishEnvironment.h
source/Learners/: ACER.cpp  ACER.h  AlgoFactory.cpp  AlgoFactory.h  AllLearners.h  Approximator.cpp  Approximator.h  CMALearner.cpp  CMALearner.h  DPG.cpp  DPG.h  DQN.cpp  DQN.h  Encapsulator.h  Learner.cpp  Learner.h  Learner_approximator.cpp  Learner_approximator.h  MemoryBuffer.cpp  (+26 more)
units/: CMakeLists.txt
units/Core/: StateAction.cpp
units/Math/: Continuous_policy.cpp
units/Network/: Network.cpp
(+303 files in other folders)
